After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 715016 - dmap: Fix memory leak when Avahi is absent
dmap: Fix memory leak when Avahi is absent
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-22 13:55 UTC by Bastien Nocera
Modified: 2013-11-27 08:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dmap: Fix memory leak when Avahi is absent (1.25 KB, patch)
2013-11-22 13:55 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-11-22 13:55:13 UTC
.
Comment 1 Bastien Nocera 2013-11-22 13:55:16 UTC
Created attachment 261234 [details] [review]
dmap: Fix memory leak when Avahi is absent

When Avahi isn't around, the plugin init will fail, and leak
a couple of hash tables and objects. Clean those up before
exiting the function.

This also checks for error properly.
Comment 2 Juan A. Suarez Romero 2013-11-27 08:42:57 UTC
commit 21e65f906bd3725c4222192e59b6128d8f526c86
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Nov 22 14:53:27 2013 +0100

    dmap: Fix memory leak when Avahi is absent
    
    When Avahi isn't around, the plugin init will fail, and leak
    a couple of hash tables and objects. Clean those up before
    exiting the function.
    
    This also checks for error properly.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=715016

 src/dmap/grl-dmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)